--- a/ActiveMQ2NServiceBus/Earth/Earth.csproj
+++ b/ActiveMQ2NServiceBus/Earth/Earth.csproj
@@ -87,4 +87,7 @@
     <StartAction>Program</StartAction>
     <StartProgram>$(ProjectDir)$(OutputPath)NServiceBus.Host.exe</StartProgram>
   </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>xcopy "$(SolutionDir)..\License.xml" "$(TargetDir)License\" /Y</PreBuildEvent>
+  </PropertyGroup>
 </Project>
