--- a/ActiveMQ2NServiceBus/Heaven/Heaven.csproj
+++ b/ActiveMQ2NServiceBus/Heaven/Heaven.csproj
@@ -89,4 +89,7 @@
     <StartAction>Program</StartAction>
     <StartProgram>$(ProjectDir)$(OutputPath)NServiceBus.Host.exe</StartProgram>
   </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>xcopy "$(SolutionDir)..\License.xml" "$(TargetDir)License\" /Y</PreBuildEvent>
+  </PropertyGroup>
 </Project>
