--- a/RabbitMQ2NServiceBus/Earth/Earth.csproj
+++ b/RabbitMQ2NServiceBus/Earth/Earth.csproj
@@ -85,4 +85,7 @@
     <StartAction>Program</StartAction>
     <StartProgram>$(ProjectDir)$(OutputPath)NServiceBus.Host.exe</StartProgram>
   </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>xcopy "$(SolutionDir)..\License.xml" "$(TargetDir)License\" /Y</PreBuildEvent>
+  </PropertyGroup>
 </Project>
