Simplified demo (running locally)

--- a/RabbitMQ2NServiceBus/Earth/App.config
+++ b/RabbitMQ2NServiceBus/Earth/App.config
@@ -6,7 +6,7 @@
     <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
   </configSections>
   <connectionStrings>
-    <add name="NServiceBus/Transport" connectionString="host=brokers:5672" />
+    <add name="NServiceBus/Transport" connectionString="host=localhost:5672" />
   </connectionStrings>
   <!--<MessageForwardingInCaseOfFaultConfig 
     ErrorQueue="The queue to which errors will be forwarded." />-->
