Simplified demo (running locally) for ActiveMQ

--- a/ActiveMQ2NServiceBus/Earth/App.config
+++ b/ActiveMQ2NServiceBus/Earth/App.config
@@ -6,7 +6,7 @@
     <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
   </configSections>
   <connectionStrings>
-    <add name="NServiceBus/Transport" connectionString="ServerUrl=activemq:tcp://brokers:61616" />
+    <add name="NServiceBus/Transport" connectionString="ServerUrl=activemq:tcp://localhost:61616" />
   </connectionStrings>
   <!--<MessageForwardingInCaseOfFaultConfig 
     ErrorQueue="The queue to which errors will be forwarded." />-->
